--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "sails-disk": "~0.9.0",
         "ejs": "0.8.4",
         "optimist": "0.3.4",
-        "grunt-contrib-handlebars": "0.5.11"
+        "grunt-ember-templates": "0.4.20"
     },
     "scripts": {
         "start": "node app.js",
