update with bower.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,12 @@ npm-debug.log
 
 
 ########################
+## bower
+#########################
+assets/bower_components
+
+
+########################
 # misc / editors
 ########################
 *~
