--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-    "name": "prototype",
-    "private": true,
-    "version": "0.0.0",
-    "description": "A prototype",
-    "dependencies": {
-        "sails": "0.9.4",
-        "grunt": "0.4.1",
-        "sails-disk": "~0.9.0",
-        "ejs": "0.8.4",
-        "optimist": "0.3.4",
-        "grunt-ember-templates": "0.4.20"
-    },
-    "scripts": {
-        "start": "node app.js",
-        "debug": "node debug app.js"
-    },
-    "main": "app.js",
-    "repository": "",
-    "author": "",
-    "license": ""
+  "name": "prototype",
+  "private": true,
+  "version": "0.0.0",
+  "description": "A prototype",
+  "dependencies": {
+    "sails": "0.9.4",
+    "grunt": "0.4.1",
+    "grunt-ember-templates": "0.4.20",
+    "sails-disk": "~0.9.0",
+    "ejs": "0.8.4",
+    "optimist": "0.3.4",
+    "bower": "1.3.5"
+  },
+  "devDependencies": {
+    "jshint": "2.4.0"
+  },
+  "scripts": {
+    "postinstall": "node node_modules/bower/bin/bower install",
+    "start": "node app.js",
+    "debug": "node debug app.js",
+    "lint": "node node_modules/jshint/bin/jshint ."
+  },
+  "main": "app.js",
+  "repository": "",
+  "author": "",
+  "license": ""
 }
